fixing bug when event has a long name it overflows at the homepage and it is ugly

--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -46,6 +46,13 @@
 	margin-left: 2em;
 }
 
+#one-trending-event #event-name-homepage {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	width: 17em;
+}
+
 #one-trending-event .text {
 	color: grey;
     font-size: 1em;
